# cookiecutter-analysis

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
{{ cookiecutter.project_slug }}/docs/: conf.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: cli.py
{{ cookiecutter.repo_name }}/: pyproject.toml
